[tool.poetry]
name = "rfm-clustering"
version = "0.1.0"
description = ""
authors = ["Luis Giraldo Gonzalez <luisggon@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
requests = "^2.31.0"
streamlit = "^1.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
